--- a/240501/JS03/style.css
+++ b/240501/JS03/style.css
@@ -19,7 +19,7 @@ body {
 header {
   width: 100%;
   height: 80px;
-  background: slategray;
+  background: #708090;
   padding: 34px;
 }
 nav {
@@ -52,7 +52,7 @@ section {
   top: -240px;
   width: 100%;
   height: 240px;
-  background: #333;
+  background: #777;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,14 +70,14 @@ section {
   font-size: 1.6rem;
 }
 input[type="search"] {
-  border: none;
+  border: transparent;
   width: 280px;
   height: 40px;
   padding: 18px;
 }
 input[type="search"]:focus,
 input[type="submit"]:focus {
-  outline: none;
+  outline: transparent;
 }
 input[type="search"]::placeholder {
   font-style: italic;
@@ -101,9 +101,9 @@ input::-webkit-search-results-decoration {
 input[type="submit"] {
   width: 60px;
   height: 40px;
-  border: none;
+  border: transparent;
   cursor: pointer;
-  background: crimson;
+  background: #3bbce4;
   color: #fff;
   opacity: 0.9;
   transition: all 0.3s;
@@ -113,13 +113,21 @@ input[type="submit"]:hover {
 }
 .hash-tag {
   margin-top: 10px;
-  color: goldenrod;
   opacity: 0;
   transition: all 0.3s;
 }
 .hash-tag.active {
   opacity: 1;
 }
-.hash-tag span {
+.tag-text {
+  display: inline-block;
+  color: #ffa500;
+  font-style: italic;
+  font-weight: 500;
+  margin-right: 5px;
   cursor: pointer;
+  transition: all 0.2s;
+}
+.tag-text:hover {
+  color: #000;
 }
