--- a/profile/style.css
+++ b/profile/style.css
@@ -22,7 +22,6 @@ a {
 }
 body {
   background: #f2f2f2;
-  z-index: -100;
 }
 
 header {
@@ -242,6 +241,10 @@ header .toggle-btn {
   height: 550px;
 }
 
+.about {
+  width: 100%;
+}
+
 .skill .section-tit {
   position: relative;
   cursor: pointer;
@@ -280,6 +283,9 @@ header .toggle-btn {
     bottom: -600px;
     opacity: 0;
   }
+}
+.skill .section-inner .skill-content {
+  margin-right: 20px;
 }
 .skill .section-inner .skill-content .skill-box {
   width: 400px;
@@ -340,13 +346,13 @@ header .toggle-btn {
 }
 .project .section-inner .modalScreen {
   position: fixed;
-  top: 10%;
+  top: 6%;
   bottom: 0;
   width: 80%;
   height: 78%;
   margin: auto;
   background: #dddddd;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   z-index: 10;
   display: none;
