--- a/profile/style.scss
+++ b/profile/style.scss
@@ -2,7 +2,6 @@
 @import "variable";
 body {
   background: map-get($font-color, bg);
-  z-index: -100;
 }
 // header
 header {
@@ -97,7 +96,6 @@ header {
   width: 100%;
   height: auto;
   margin: 100px auto 0;
-  // border: 1px solid red;
 }
 .container {
   width: 100%;
@@ -218,6 +216,7 @@ header {
 }
 // about
 .about {
+  width: 100%;
 }
 // skill
 .skill {
@@ -262,6 +261,7 @@ header {
   }
   .section-inner {
     .skill-content {
+      margin-right: 20px;
       .skill-box {
         width: 400px;
         height: 60px;
@@ -323,15 +323,16 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+
     .modalScreen {
       position: fixed;
-      top: 10%;
+      top: 6%;
       bottom: 0;
       width: 80%;
       height: 78%;
       margin: auto;
       background: map-get($font-color, primary-light);
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
       border-radius: 20px;
       z-index: 10;
       display: none;
