--- a/240502/새 폴더/style02.css
+++ b/240502/새 폴더/style02.css
@@ -20,13 +20,12 @@ body {
 
 .accordion-item {
   background: #fff;
-  padding: 15px 30px 5px;
+  padding: 15px 30px 15px;
   border-radius: 20px;
   margin-bottom: 18px;
   border: 1px solid #ddd;
 }
 .title {
-  margin-bottom: 14px;
   position: relative;
   width: 99%;
   overflow: hidden;
@@ -45,5 +44,6 @@ body {
 .content {
   display: none;
   border-top: 1px solid #333;
-  padding: 10px;
+  padding-top: 10px;
+  margin-top: 15px;
 }
