--- a/javascript/diary_React/react01/src/App.css
+++ b/javascript/diary_React/react01/src/App.css
@@ -1,38 +1,80 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@font-face {
+  font-family: "Mapo";
+  src: url("./fonts/MapoGoldenPier.ttf");
+}
+
+/* font-family: "Mapo" */
+/* font-family: "Inter" */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #fff;
+  font-family: "Inter";
+  color: #222;
+}
+
 .App {
   text-align: center;
+  width: auto;
+  max-width: 400px;
+  min-width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.music {
+  cursor: pointer;
 }
+.weddingMain {
+  width: 96%;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-width: 300px;
+  height: auto;
+  border-radius: 150px;
+}
+.navigation {
+  width: 100%;
+  height: 50px;
+  line-height: 48px;
+  border-radius: 16px;
+  box-shadow: 0 10px 10px rgba(248, 164, 164, 0.3);
+  margin: 30px 0;
+}
+.date {
+  margin: 0 5px;
+  cursor: pointer;
+}
+.calendar {
+  width: 100%;
+}
+.map {
+  width: 96%;
+}
+.subtitle {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #f8a4a4;
+}
+h2 {
+  font-size: 1.4rem;
+}
+.date-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.date-info {
+  width: 70%;
+  min-width: 280px;
 }
