--- a/javascript/diary_React/react01/src/App.css
+++ b/javascript/diary_React/react01/src/App.css
@@ -16,7 +16,11 @@ body {
   font-family: "Inter";
   color: #222;
 }
-
+p {
+  font-family: "Mapo";
+  font-weight: 600;
+  color: #444;
+}
 .App {
   text-align: center;
   width: 100%;
@@ -47,15 +51,25 @@ body {
   width: 96%;
   min-width: 300px;
   height: auto;
+  margin: 20px auto;
   border-radius: 150px;
 }
 .navigation {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 50px;
+  padding: 0 24px;
   line-height: 48px;
   border-radius: 10px;
-  box-shadow: 0 10px 10px rgba(248, 164, 164, 0.3);
+  box-shadow: 0 15px 10px rgba(248, 164, 164, 0.2);
   margin: 30px 0;
+  font-family: "Mapo";
+  font-weight: 600;
+  color: #555;
+  span:hover {
+    color: #f8a4a4;
+  }
 }
 .date {
   margin: 0 5px;
@@ -65,12 +79,18 @@ body {
   width: 100%;
 }
 .map {
-  width: 96%;
+  display: flex;
+  justify-content: center;
+  max-width: 400px;
+  height: 280px;
+  border: 2px solid #f8a4a4;
+  border-radius: 8px;
 }
 .subtitle {
+  font-family: "Mapo";
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #f8a4a4;
+  color: rgba(248, 164, 164, 0.7);
 }
 h2 {
   font-family: "Mapo";
