--- a/javascript/diary_React/react01/src/App.css
+++ b/javascript/diary_React/react01/src/App.css
@@ -32,20 +32,30 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* border: 1px solid red; */
   position: relative;
   padding-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrap {
+  position: relative;
 }
 .music {
+  width: 24px;
+  height: 24px;
   cursor: pointer;
   position: absolute;
-  right: 20px;
-  top: 20px;
+  top: 10px;
+  right: 10px;
+  z-index: 150;
+  animation: volume alternate 2s infinite;
+}
+@keyframes volume {
+  0% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 .weddingMain {
   width: 96%;
@@ -54,21 +64,39 @@ p {
   margin: 20px auto;
   border-radius: 150px;
 }
+.mainText p:first-child {
+  display: inline-block;
+  margin: 6px;
+  font-size: 24px;
+  color: #222;
+}
+.mainText p:last-child {
+  display: inline-block;
+  margin-top: 12px;
+  font-size: 16px;
+  line-height: 25px;
+}
 .navigation {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 50px;
   padding: 0 24px;
   line-height: 48px;
+  background: #f8f8f8;
   border-radius: 10px;
   box-shadow: 0 15px 10px rgba(248, 164, 164, 0.2);
   margin: 30px 0;
   font-family: "Mapo";
   font-weight: 600;
   color: #555;
+  z-index: 100;
+  overflow-y: hidden;
   span:hover {
     color: #f8a4a4;
+    cursor: pointer;
   }
 }
 .date {
@@ -102,12 +130,13 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 34px;
+  margin-top: 60px;
 }
 .date-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 60px;
 }
 .date-info {
   width: 80%;
