--- a/javascript/grid/style.css
+++ b/javascript/grid/style.css
@@ -117,23 +117,20 @@ header {
 }
 .search:hover {
   background: #fff;
-  color: #999;
-  border: 2px solid #fff;
+  color: #222f3e;
+  border: 2px solid #222f3e;
 }
 .calender-member {
   display: none;
 }
-section {
-  position: absolute;
+.main {
   width: 100%;
 }
 .hotel-main {
-  position: absolute;
-  left: 0;
-  top: 0;
+  position: relative;
   width: 100%;
-  height: 90vh;
-  background: url("./img/main_yy_20240229.jpg") center / cover no-repeat;
+  height: 80vh;
+  background: url("./img/main_yy_20240229.jpg") top/ cover no-repeat;
 }
 .hotel-main::after {
   position: absolute;
@@ -142,18 +139,113 @@ section {
   content: "";
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0.2);
 }
-h1 {
+.welcome-letter {
   position: absolute;
   min-width: 600px;
   left: 12%;
-  bottom: 10%;
-  font-size: 4.8rem;
+  bottom: 12%;
+  font-size: 4.8em;
   color: #fff;
   text-shadow: 0 15px 15px rgba(0, 0, 0, 0.6);
   z-index: 10;
 }
-h1 span {
+.welcome-letter span {
   margin-left: 20px;
+}
+.room-type {
+  height: auto;
+  background: #fff;
+  padding: 50px;
+}
+.types > h1 {
+  position: relative;
+  font-size: 32px;
+  color: #222f3e;
+  margin-bottom: 32px;
+}
+.types > h1::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 100%;
+  height: 4px;
+  background: #999;
+}
+.room-type-content {
+  width: 88%;
+  border-radius: 8px;
+  display: grid;
+  grid-gap: 50px;
+}
+
+.room-type-content h1 {
+  grid-area: h1;
+  padding-top: 16px;
+}
+
+.room-type-content p {
+  grid-area: p;
+  margin-top: 8px;
+}
+.room-type-content span {
+  width: 50vw;
+  height: 100%;
+  grid-area: span;
+  overflow: hidden;
+  margin: 0 10px;
+}
+.room-type-content > div:nth-child(2n + 1) span {
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+.room-type-content > div:nth-child(2n) span {
+  grid-row: 1/3;
+  grid-column: 2/3;
+}
+
+.room-type-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.3s;
+}
+.room-type-content img:hover {
+  transform: scale(1.1);
+}
+.room-type-content > div {
+  display: grid;
+  background: #ddd;
+  padding: 20px;
+  border-radius: 8px;
+
+  justify-content: center;
+}
+.room-type-content > div:nth-child(2n + 1) {
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 4fr;
+  grid-template-areas: "span h1 " "span p";
+}
+.room-type-content > div:nth-child(2n) {
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 4fr;
+  grid-template-areas: "h1 span" "p span";
+}
+
+.activity-content {
+  width: 75%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+}
+.activity-content > div {
+  display: grid;
+  justify-items: center;
+}
+
+.activity-content > div > p {
+  display: inline-block;
+  margin: 20px 0;
+  width: 80%;
 }
