--- a/javascript/grid/style.css
+++ b/javascript/grid/style.css
@@ -5,6 +5,7 @@ body {
   display: grid;
   place-items: center;
   font-family: "Noto Sans KR";
+  overflow-x: hidden;
 }
 header {
   display: grid;
@@ -16,10 +17,11 @@ header {
   display: grid;
   place-items: center;
   width: 100%;
+  background: #fdf6ee;
 }
 .navOne {
   height: 100px;
-  background: #222f3e;
+  background: #31343b;
 }
 .nav-bar {
   width: 75%;
@@ -33,7 +35,7 @@ header {
   font-weight: 600;
 }
 .nav-bar li:first-child i {
-  color: #999;
+  color: #fdf6ee;
   margin-right: 8px;
 }
 .toggle-btn {
@@ -50,10 +52,10 @@ header {
 }
 .toggle-btn span {
   width: 100%;
-  background: #999;
+  background: #fdf6ee;
 }
 .navTwo {
-  background: #999;
+  background: #fdf6ee;
 }
 .reservation-bar {
   display: grid;
@@ -67,7 +69,7 @@ header {
 .title {
   font-size: 14px;
   font-weight: 600;
-  color: #222f3e;
+  color: #31343b;
 }
 .reservation-bar li {
   display: grid;
@@ -76,7 +78,7 @@ header {
   height: 64px;
   padding-right: 10px;
   text-align: center;
-  border-right: 2px solid #fff;
+  border-right: 2px solid #ed8c48;
 }
 .reservation-bar li:first-child {
   place-items: start;
@@ -91,15 +93,16 @@ header {
 #hotel-name {
   width: 80%;
   height: 40px;
+  padding-left: 10px;
   border: none;
-  background: #999;
+  background: #fdf6ee;
 }
 #hotel-name:focus {
   outline: none;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #ed8c48;
 }
 #hotel-name::placeholder {
-  color: #fff;
+  color: #ed8c48;
   font-size: 16px;
   font-weight: 500;
 }
@@ -109,7 +112,7 @@ header {
   border: 2px solid #fff;
   border-radius: 8px;
   color: #fff;
-  background: #222f3e;
+  background: #ed8c48;
   cursor: pointer;
   transition: all 0.3s;
   font-size: 18px;
@@ -117,8 +120,8 @@ header {
 }
 .search:hover {
   background: #fff;
-  color: #222f3e;
-  border: 2px solid #222f3e;
+  color: #31343b;
+  border: 2px solid #ed8c48;
 }
 .calender-member {
   display: none;
@@ -154,48 +157,59 @@ header {
 .welcome-letter span {
   margin-left: 20px;
 }
+section {
+  padding: 100px 0;
+}
+section:first-child {
+  padding: 0;
+}
 .room-type {
+  background: #fdf6ee;
   height: auto;
-  background: #fff;
-  padding: 50px;
 }
 .types > h1 {
   position: relative;
   font-size: 32px;
-  color: #222f3e;
-  margin-bottom: 32px;
+  color: #31343b;
+  margin-bottom: 100px;
 }
 .types > h1::before {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -4px;
+  bottom: -10px;
   width: 100%;
   height: 4px;
-  background: #999;
+  background: #ed8c48;
 }
 .room-type-content {
-  width: 88%;
+  width: 75%;
   border-radius: 8px;
   display: grid;
   grid-gap: 50px;
+  align-content: center;
 }
 
 .room-type-content h1 {
   grid-area: h1;
   padding-top: 16px;
+  padding-left: 10px;
 }
 
 .room-type-content p {
   grid-area: p;
   margin-top: 8px;
+  padding-left: 10px;
+  width: 88%;
+  font-size: 18px;
+  line-height: 36px;
+  color: #555;
 }
 .room-type-content span {
-  width: 50vw;
+  width: 34vw;
   height: 100%;
   grid-area: span;
   overflow: hidden;
-  margin: 0 10px;
 }
 .room-type-content > div:nth-child(2n + 1) span {
   grid-row: 1/3;
@@ -217,35 +231,107 @@ header {
 }
 .room-type-content > div {
   display: grid;
-  background: #ddd;
+  place-content: center;
+  background: #fff;
+  width: 80%;
   padding: 20px;
+  margin: 0 auto;
   border-radius: 8px;
-
-  justify-content: center;
 }
 .room-type-content > div:nth-child(2n + 1) {
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr 1.2fr;
   grid-template-rows: 1fr 4fr;
   grid-template-areas: "span h1 " "span p";
 }
 .room-type-content > div:nth-child(2n) {
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1.2fr 2fr;
   grid-template-rows: 1fr 4fr;
   grid-template-areas: "h1 span" "p span";
 }
 
+.middle-img {
+  width: 100vw;
+  height: 200px;
+  background: url("./img/dining_photo.jpg") center/cover no-repeat;
+}
+
+.container {
+  width: 75%;
+  height: auto;
+  padding: 20px;
+  border-radius: 8px;
+  display: grid;
+  grid-template-rows: repeat(3, 180px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 8px;
+  background: #fff;
+  border: 2px solid #ed8c48;
+}
+.item {
+  position: relative;
+
+  overflow: hidden;
+}
+.item:nth-child(1) {
+  grid-row: 1/3;
+}
+.item:nth-child(2) {
+  grid-column: 2/4;
+  grid-row: 1/3;
+}
+.item:nth-child(6) {
+  grid-column: 1/4;
+}
+
+.item > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.item > p {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  transition: all 0.5s;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 255, 0.2);
+}
+.item:hover p {
+  top: 0;
+}
+
 .activity-content {
+  justify-items: center;
   width: 75%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-gap: 50px;
 }
 .activity-content > div {
   display: grid;
   justify-items: center;
+  border: 2px solid #ed8c48;
+  background: #fff;
+  width: 80%;
+  border-radius: 8px;
+  overflow: hidden;
 }
-
 .activity-content > div > p {
   display: inline-block;
-  margin: 20px 0;
   width: 80%;
+  height: auto;
+  padding: 28px 0;
+  font-size: 18px;
+  letter-spacing: 1.2px;
+}
+p > .accent {
+  color: orangered;
+  font-weight: 500;
+}
+.activity-content > div > img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
