--- a/javascript/grid/style.css
+++ b/javascript/grid/style.css
@@ -265,11 +265,9 @@ section:first-child {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 8px;
   background: #fff;
-  border: 2px solid #ed8c48;
 }
 .item {
   position: relative;
-
   overflow: hidden;
 }
 .item:nth-child(1) {
@@ -296,12 +294,21 @@ section:first-child {
   transition: all 0.5s;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 255, 0.2);
+  padding: 0 20%;
+  display: grid;
+  grid-template-rows: 50px auto;
+  justify-items: center;
+  align-content: center;
+  background: rgba(144, 144, 255, 0.7);
+  color: #fff;
 }
+
 .item:hover p {
   top: 0;
 }
-
+.item b {
+  font-size: 24px;
+}
 .activity-content {
   justify-items: center;
   width: 75%;
@@ -312,7 +319,7 @@ section:first-child {
 .activity-content > div {
   display: grid;
   justify-items: center;
-  border: 2px solid #ed8c48;
+
   background: #fff;
   width: 80%;
   border-radius: 8px;
@@ -334,4 +341,22 @@ p > .accent {
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+/*popular-place*/
+
+.imgAll {
+  width: 75%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+.imgAll img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.imgAll img:hover {
+  transform: scale(1.2);
+  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.4);
 }
