--- a/javascript/grid/style.css
+++ b/javascript/grid/style.css
@@ -12,6 +12,9 @@ header {
   place-items: center;
   width: 100%;
   z-index: 100;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 .content {
   display: grid;
@@ -20,15 +23,16 @@ header {
   background: #fdf6ee;
 }
 .navOne {
-  height: 100px;
+  height: 50px;
   background: #31343b;
+  position: relative;
 }
 .nav-bar {
   width: 75%;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(5, 1fr);
-  height: 100px;
+  height: 50px;
   text-align: center;
   color: #fff;
   font-size: 18px;
@@ -39,14 +43,14 @@ header {
   margin-right: 8px;
 }
 .toggle-btn {
-  width: 32px;
-  height: 30px;
+  width: 28px;
+  height: 24px;
   position: absolute;
   right: 38px;
-  top: 35px;
+  top: 12px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 8px;
+  grid-gap: 4px;
   cursor: pointer;
   display: none;
 }
@@ -62,6 +66,7 @@ header {
   place-items: center;
   grid-template-columns: repeat(4, 1fr);
   width: 88%;
+  margin: 0 80px;
   height: auto;
   color: #fff;
   padding: 10px;
@@ -71,6 +76,7 @@ header {
   font-weight: 600;
   color: #31343b;
 }
+
 .reservation-bar li {
   display: grid;
   place-items: center;
@@ -109,6 +115,7 @@ header {
 .search {
   width: 68%;
   height: 80%;
+  margin: 0 auto;
   border: 2px solid #fff;
   border-radius: 8px;
   color: #fff;
@@ -124,15 +131,64 @@ header {
   border: 2px solid #ed8c48;
 }
 .calender-member {
+  position: absolute;
+  top: 134px;
+  background: #fdf6ee;
+  width: 40%;
+  min-width: 380px;
+  padding: 20px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   display: none;
 }
+.calender {
+  border-right: 1px solid #ed8c48;
+  text-align: center;
+}
+
+.member {
+  padding: 0 20px;
+}
+.room {
+  display: grid;
+  grid-template-areas: "item item" "plus btn";
+  grid-gap: 16px;
+}
+.room-item {
+  grid-area: item;
+  display: grid;
+  grid-template-areas: "room adult" ". child";
+  justify-content: space-around;
+}
+.room-item li {
+  &:first-child {
+    grid-area: room;
+  }
+  &:nth-child(2) {
+    grid-area: adult;
+  }
+  &:last-child {
+    grid-area: child;
+  }
+}
+.room-plus {
+  grid-area: plus;
+  text-align: center;
+}
+.room > button {
+  grid-area: btn;
+}
+
 .main {
   width: 100%;
 }
 .hotel-main {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 88vh;
   background: url("./img/main_yy_20240229.jpg") top/ cover no-repeat;
 }
 .hotel-main::after {
@@ -206,7 +262,6 @@ section:first-child {
   color: #555;
 }
 .room-type-content span {
-  width: 34vw;
   height: 100%;
   grid-area: span;
   overflow: hidden;
@@ -214,6 +269,7 @@ section:first-child {
 .room-type-content > div:nth-child(2n + 1) span {
   grid-row: 1/3;
   grid-column: 1/3;
+  width: 60%;
 }
 .room-type-content > div:nth-child(2n) span {
   grid-row: 1/3;
@@ -239,12 +295,12 @@ section:first-child {
   border-radius: 8px;
 }
 .room-type-content > div:nth-child(2n + 1) {
-  grid-template-columns: 2fr 1.2fr;
+  grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 4fr;
   grid-template-areas: "span h1 " "span p";
 }
 .room-type-content > div:nth-child(2n) {
-  grid-template-columns: 1.2fr 2fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr 4fr;
   grid-template-areas: "h1 span" "p span";
 }
@@ -343,11 +399,44 @@ p > .accent {
   object-fit: cover;
 }
 /*popular-place*/
-
+.popular-place {
+  padding-bottom: 150px;
+}
+.popular-place h1 {
+  margin-bottom: 20px;
+}
+.popular-place p {
+  display: inline-block;
+  margin-bottom: 50px;
+}
+.imgItem {
+  position: relative;
+  perspective: 500px;
+  padding: 30px 0 10px;
+}
+.imgItem h2 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  text-shadow: 0 0 5px #ed8c48;
+  font-size: 16px;
+  color: #fff;
+  opacity: 0;
+  transition: all 0.5s;
+  z-index: -1;
+}
+.imgItem:hover h2 {
+  font-size: 24px;
+  opacity: 1;
+  z-index: 1;
+  bottom: -20px;
+}
 .imgAll {
-  width: 75%;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  /* grid-gap: 10px; */
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
 .imgAll img {
   width: 100%;
@@ -357,6 +446,83 @@ p > .accent {
   transition: all 0.5s;
 }
 .imgAll img:hover {
-  transform: scale(1.2);
-  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.4);
+  transform: translate3d(0, 0, -50px);
+  box-shadow: 0 40px 40px rgba(0, 0, 0, 0.4);
+  position: relative;
+}
+/*footer*/
+footer {
+  background: #31343b;
+  color: #fff;
+  width: 100%;
+  height: auto;
+  padding: 20px 0;
+}
+.footer-inner {
+  width: 75%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  font-weight: 200;
+  font-size: 14px;
+}
+.footer-inner ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 120px));
+  align-items: center;
+  justify-content: center;
+}
+.footer-inner ul li {
+  position: relative;
+  text-align: center;
+  &::after {
+    content: "";
+    width: 2px;
+    height: 2px;
+    border-radius: 100%;
+    background: #fff;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  &:last-child::after {
+    display: none;
+  }
+}
+.footer-inner p {
+  width: 88%;
+  margin: 10px auto;
+  color: #ddd;
+  font-weight: 100;
+  line-height: 24px;
+  &:last-child {
+    font-weight: 400;
+    font-style: italic;
+  }
+}
+@media (max-width: 1024px) {
+  .nav-bar,
+  .room-type-content {
+    width: 100%;
+  }
+  .reservation-bar {
+    width: 100%;
+    padding-left: 50px;
+  }
+  .calender {
+    border: none;
+    padding-bottom: 10px;
+  }
+  .welcome-letter {
+    font-size: 3.2rem;
+  }
+  .room-type-content {
+    min-width: 790px;
+  }
+  .item:nth-child(3) > p span,
+  .item:nth-child(4) > p span,
+  .item:nth-child(5) > p span {
+    display: none;
+  }
 }
