--- a/javascript/filter/style.css
+++ b/javascript/filter/style.css
@@ -10,16 +10,23 @@
   justify-content: center;
   align-items: center;
   font-family: "Noto Sans KR";
+  background: rgba(125, 25, 25, 0.9);
 }
-header {
+header,
+.modalItem {
   display: flex;
-  width: 800px;
+  width: 41.6%;
+  min-width: 680px;
+  padding: 20px 40px;
   margin-top: 60px;
   flex-direction: column;
   gap: 20px;
   align-items: center;
+  background: #fff;
+  border-radius: 5px;
 }
-header h1 {
+header h1,
+.modalItem h1 {
   margin-bottom: 20px;
   position: relative;
   text-align: center;
@@ -39,9 +46,15 @@ header h1::after {
 header img {
   border: 5px solid goldenrod;
   border-radius: 8px;
+  width: 100%;
+  min-width: 600px;
+  height: auto;
+  object-fit: cover;
 }
 .content {
   padding: 20px 60px;
+  width: 100%;
+  min-width: 600px;
 }
 .content div {
   width: 100%;
@@ -51,22 +64,27 @@ header img {
   justify-content: space-between;
   font-size: 1.2rem;
 }
-header div span {
+header div span,
+.modalItem div span {
   font-size: 1rem;
   color: brown;
 }
-header p {
+header p,
+.modalItem p {
   color: #333;
 }
 
 .category-menu {
-  width: 1100px;
+  width: 50%;
+  min-width: 600px;
   height: 50px;
   margin-top: 20px;
   margin-bottom: 0;
   display: flex;
   justify-content: space-between;
   cursor: pointer;
+  background: #fff;
+  border-radius: 5px;
 }
 .category-menu span {
   width: 100%;
@@ -90,18 +108,32 @@ header p {
   color: #fff;
 }
 .container {
-  width: 1200px;
+  width: 56.6%;
+  min-width: 680px;
   padding: 40px;
   border: 5px solid goldenrod;
+  border-radius: 5px;
   margin-bottom: 150px;
+  background: #fff;
 }
 .container ul {
   display: flex;
-  gap: 34px;
+  justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
+}
+
+.container ul li {
+  margin-bottom: 24px;
+  cursor: pointer;
 }
 .container ul li img {
   width: 250px;
+}
+.desc {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4px;
 }
 .title {
   font: 18px;
@@ -109,4 +141,51 @@ header p {
 }
 .price {
   color: brown;
+}
+.modal-content {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(2px);
+  background: rgba(0, 0, 0, 0.4);
+  transition: all 0.2s linear;
+  z-index: -1;
+  opacity: 0;
+}
+.modal-content.active {
+  z-index: 10;
+  opacity: 1;
+}
+.modal-inner {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modalItem {
+  border: 5px solid goldenrod;
+  position: relative;
+  padding-top: 40px;
+}
+.modalItem img {
+  width: 46%;
+  height: auto;
+  object-fit: cover;
+}
+.closeBtn {
+  position: absolute;
+  right: 10px;
+  top: 0;
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+  font: bold 1.5rem/1 "arial";
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
 }
