--- a/javascript/mega/style.css
+++ b/javascript/mega/style.css
@@ -324,7 +324,7 @@ nav {
 /*-----content-pick-----*/
 .content-pick {
   width: 100%;
-  height: 80vh;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -369,8 +369,9 @@ nav {
 .pick-slide-wrap {
   width: 100%;
   display: flex;
-  margin-right: 16px;
+  gap: 16px;
   position: absolute;
+  left: 0;
 }
 .pick-book {
   width: 100%;
@@ -435,6 +436,7 @@ nav {
 }
 .bar-button {
   width: 75%;
+  margin: 50px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -489,7 +491,7 @@ nav {
   left: 0;
   top: 0;
   width: 36.5%;
-  /* width: 730px; */
+  min-width: 540px;
   height: 790px;
   background: #d5e9fc;
   border-top-right-radius: 96px;
@@ -570,13 +572,12 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 120px;
-  min-height: 24%;
-  min-width: 32%;
+  min-width: 340px;
+  border: 1px solid red;
 }
 .slide-item img {
   display: inline-block;
-  width: 268px;
+  width: 300px;
   height: auto;
   margin-bottom: 39px;
 }
@@ -589,12 +590,19 @@ nav {
   text-overflow: ellipsis;
   word-break: break-all;
 }
-
+.items-wrap {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  left: 0;
+  gap: 14%;
+}
 .slide-wrap .item {
   display: none;
-  width: auto;
+  width: 100%;
   gap: 24px;
   margin: 0 auto;
+  position: relative;
 }
 .slide-wrap .item.active {
   display: flex;
