--- a/javascript/mega/style.css
+++ b/javascript/mega/style.css
@@ -561,6 +561,8 @@ nav {
   display: flex;
 }
 .slide-wrap {
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 520px;
   overflow: hidden;
@@ -572,12 +574,14 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 340px;
-  border: 1px solid red;
+  min-width: 24%;
+  margin-right: 14%;
 }
 .slide-item img {
   display: inline-block;
-  width: 300px;
+  width: 240px;
+  max-width: 280px;
+  max-height: 320px;
   height: auto;
   margin-bottom: 39px;
 }
@@ -585,6 +589,7 @@ nav {
   width: 100%;
   height: 32px;
   font-size: 28px;
+  text-align: center;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -595,7 +600,7 @@ nav {
   display: flex;
   position: absolute;
   left: 0;
-  gap: 14%;
+  transition: all 0.3s;
 }
 .slide-wrap .item {
   display: none;
@@ -603,6 +608,7 @@ nav {
   gap: 24px;
   margin: 0 auto;
   position: relative;
+  aspect-ratio: 2.9;
 }
 .slide-wrap .item.active {
   display: flex;
