--- a/javascript/mega/style.css
+++ b/javascript/mega/style.css
@@ -192,6 +192,7 @@ nav {
   bottom: 24px;
   right: 56px;
   gap: 2px;
+  z-index: 100;
 }
 .gotoTop img {
   transform: rotate(-90deg);
@@ -564,8 +565,8 @@ nav {
   display: flex;
   justify-content: center;
   width: 100%;
+  min-width: 724px;
   height: 520px;
-  overflow: hidden;
   position: relative;
 }
 
@@ -600,6 +601,7 @@ nav {
   display: flex;
   position: absolute;
   left: 0;
+  min-width: 850px;
   transition: all 0.3s;
 }
 .slide-wrap .item {
@@ -622,6 +624,7 @@ nav {
   width: 40%;
   height: 4px;
   background: rgba(17, 17, 17, 0.1);
+  min-width: 600px;
 }
 .inner-bar {
   width: calc(100% / 9);
@@ -640,33 +643,56 @@ nav {
 }
 /*-----content-youtube-----*/
 .content-youtube {
-  width: 1440px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 600px;
   padding: 120px 0;
-  margin: 0 auto;
+  margin: 0 auto 150px;
+  position: relative;
+}
+.content-inner {
+  width: 75vw;
+  min-width: 1000px;
+  height: 420px;
+  position: relative;
   overflow: hidden;
 }
 .youtube-tit {
   display: flex;
   justify-content: space-between;
   margin-bottom: 28px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 .youtube-tit h1 {
   font-size: 38px;
   font-weight: bold;
 }
 .thumbnail {
+  position: absolute;
+  width: 100%;
+  height: 80%;
   display: flex;
+  left: 0;
+  bottom: 0;
   gap: 28px;
+  transition: all 0.3s;
 }
-.thumbnail li:first-child a {
-  display: inline-block;
-  width: 560px;
-  height: 320px;
-  border: 1px solid #eee;
+.thumbnail li {
+  width: 100%;
+  height: 100%;
+}
+.thumbnail li a {
+  width: 100%;
+  height: 100%;
 }
 .thumbnail img {
   width: 558px;
   height: 318px;
+  object-fit: cover;
 }
 /*-----content-event-----*/
 .content-event {
